correct spacing of next and prev icons on video test carousel of home page

--- a/src/index.css
+++ b/src/index.css
@@ -222,11 +222,11 @@ form select {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%234f4f4f'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e")  !important;
 }
 
-.carousel-control-next-icon {
+#client__test__video .carousel-control-next-icon {
   margin-left: -230px;
 }
 
-.carousel-control-prev-icon {
+#client__test__video .carousel-control-prev-icon {
   background-image: none;
   margin-right: -230px;
 }
